<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    android:background="@drawable/background"
    tools:context="com.example.wulikabaw.RegisterActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/zhuce_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zcxyh"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <TableRow>

        <TextView
            android:id="@+id/zhuce_text_zhanghao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/zhuce_zhanghao" />

        <EditText
            android:id="@+id/zhuce_edit_zhanghao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/zhuce_edit_zhanghao" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/zhuce_text_mima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/zhuce_mima" />

        <EditText
            android:id="@+id/zhuce_edit_mima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="textPassword"
            android:hint="@string/zhuce_edit_mima" />
    </TableRow>
    
    <TableRow>

        <TextView
            android:id="@+id/zhuce_text_mima_queren"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/zhuce_mima_queren" />

        <EditText
            android:id="@+id/zhuce_edit_mima_queren"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="textPassword"
            android:hint="@string/zhuce_edit_mima_queren" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/zhuce_text_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/zhuce_phone" />
<!-- 输入的文字为电话号码 -->
        <EditText
            android:id="@+id/zhuce_edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:singleLine="true"
            android:numeric="integer"
            android:hint="@string/zhuce_edit_phone" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/zhuce_text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/zhuce_email" />

        <EditText
            android:id="@+id/zhuce_edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/zhuce_edit_email" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btn_zhuce"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="#1E90FF"
            android:gravity="center"
            android:text="@string/zcbtn"
            android:textColor="@drawable/white" />
    </TableRow>
    
</TableLayout>