<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    android:background="@drawable/background"
    tools:context="com.example.wulikabaw.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:background="#00ffffff"
            android:src="@drawable/logo1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        
    </LinearLayout>

    <TableRow>

        <TextView
            android:id="@+id/text_zhanghao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zhanghao" />

        <EditText
            android:id="@+id/edit_zhanghao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/edit_zhanghao" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/text_mima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mima" />

        <EditText
            android:id="@+id/edit_mima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="textPassword"
            android:hint="@string/edit_mima" />
    </TableRow>

    <TableRow >
        <CheckBox 
            android:id="@+id/remember_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:text="记住密码" />
    </TableRow>
    <TableRow>

        <Button
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="#1E90FF"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@drawable/white" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_wfdl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/wufadenglu"
            android:textColor="#1E90FF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_zhuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/zhuce"
            android:textColor="#1E90FF"
            android:textSize="20sp" />
    </RelativeLayout>

</TableLayout>