<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background" 
    android:stretchColumns="1">
   
    <!-- 上部内容 -->
        <TableRow 
            android:gravity="center">
        <TextView
            android:id="@+id/title_text3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="24sp"
            android:text="证件中心" />
        </TableRow>

        <TableRow>
            <EditText
                android:id="@+id/document_searchkey"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/tishi" />
            <Button
                android:id="@+id/document_search_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/search" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/document_add_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add" />
        </TableRow>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/list_document_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>
    
    <!-- 底部导航栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_zhengjian1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="#467A8E"
            android:gravity="center"
            android:text="@string/zhengjian"
            android:textColor="#000"
            android:textSize="25sp" />
        <!-- 分割线 -->

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#cccccc" />

        <TextView
            android:id="@+id/text_huiyuan1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/huiyuan"
            android:textColor="#467A8E"
            android:textSize="25sp" />
        <!-- 分割线 -->

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#ccc" />

        <TextView
            android:id="@+id/text_wode1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/wode"
            android:textColor="#467A8E"
            android:textSize="25sp" />
    </LinearLayout>

</TableLayout>