<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    android:background="@drawable/background"
    tools:context="com.example.wulikabaw.SettingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

       <TextView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/wode_shezhi"
    android:textSize="35sp"
    android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />
    <TableRow
        android:layout_margin="5dip">

        <TextView
            android:id="@+id/xiugai_mima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:text="@string/xiugai_mima" />

       
    </TableRow>
    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />
    <TableRow
        android:layout_margin="5dip">

        <TextView
            android:id="@+id/xiugai_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:text="@string/xiugai_phone" />
    </TableRow>
<View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />
    <TableRow
        android:layout_margin="5dip">

        <TextView
            android:id="@+id/xiugai_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:text="@string/xiugai_email" />

        
    </TableRow>
<View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    
    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />
    <TableRow
        android:layout_margin="5dip">
        <TextView
            android:id="@+id/yijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:text="@string/yijian" />

    </TableRow>
    
    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />
    <TableRow
        android:layout_margin="5dip">

        <TextView
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:text="@string/about" /> 
    </TableRow>
    
</TableLayout>

