<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    android:background="@drawable/background">

    
    <!-- 上部内容 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title_text3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="24sp"
            android:text="账户详情" />

    </LinearLayout>
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TableRow android:layout_margin="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <TableRow android:layout_margin="5dip" >

            <TextView
                android:id="@+id/wode_logo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/wode_logo"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/wode_text_logo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="right"
                android:scaleType="fitEnd" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <TableRow android:layout_margin="5dip" >

            <TextView
                android:id="@+id/wode_zhanghao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/wode_zhanghao"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wode_text_zhanghao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <TableRow android:layout_margin="5dip" >

            <TextView
                android:id="@+id/wode_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/wode_phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wode_text_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <TableRow android:layout_margin="5dip" >

            <TextView
                android:id="@+id/wode_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/wode_email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wode_text_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <TableRow android:layout_margin="5dip" >

            <TextView
                android:id="@+id/wode_credit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/wode_credit"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wode_text_credit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <TableRow android:layout_margin="5dip" >

            <TextView
                android:id="@+id/wode_shezhi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/wode_shezhi"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />
    </TableLayout>
    
    
    <!-- 底部导航栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_zhengjian3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/zhengjian"
            android:textColor="#467A8E"
            android:textSize="25sp" />
        <!-- 分割线 -->

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#cccccc" />

        <TextView
            android:id="@+id/text_huiyuan3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/huiyuan"
            android:textColor="#467A8E"
            android:textSize="25sp" />
        <!-- 分割线 -->

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#ccc" />

        <TextView
            android:id="@+id/text_wode3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="#467A8E"
            android:gravity="center"
            android:text="@string/wode"
            android:textColor="#000"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>