<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- 上部内容 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title_text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="会员福利"
            android:textColor="#000"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <com.example.wulikabaw.SlideShowView
            android:id="@+id/slideshowView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" >

        <ListView
            android:id="@+id/list_document_results1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </ListView>

        <ListView
            android:id="@+id/list_document_results2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </ListView>
    </LinearLayout>

    <!-- 底部导航栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_zhengjian2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/zhengjian"
            android:textColor="#467A8E"
            android:textSize="25sp" />
        <!-- 分割线 -->

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#cccccc" />

        <TextView
            android:id="@+id/text_huiyuan2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="#467A8E"
            android:gravity="center"
            android:text="@string/huiyuan"
            android:textColor="#000"
            android:textSize="25sp" />
        <!-- 分割线 -->

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#ccc" />

        <TextView
            android:id="@+id/text_wode2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/wode"
            android:textColor="#467A8E"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>